fixed on firefox. Tweaked some copywriting and small layout changes

--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,6 @@
 .about-section{
   background-color: #f0f0f0;
   margin: auto;
-  padding: 3vh 0 3vh;
   display: flex;
   justify-content: center;
 }
