--- a/src/components/Art/art.css
+++ b/src/components/Art/art.css
@@ -40,6 +40,7 @@
 
 .gallery >img{
     width: 100%;
+    border-radius: 0.35em;
 }
 
 @media only screen and (max-width: 770px) {
