--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -1,6 +1,5 @@
 .projects {
     background-color: #F0F0F0;
-    padding-top: 10vh;
 }
 
 .projects > h1{
