--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -16,6 +16,7 @@
     align-items: center;
 
     /*text-align: start;*/
+    position: relative;
 }
 
 .my-btn > img{
