--- a/src/components/hero section/hero.css
+++ b/src/components/hero section/hero.css
@@ -36,7 +36,7 @@
 .hero-graphic {
     /*object-fit: cover;*/
 
-    width: 60%;
+    width: 50%;
     align-self: center;
     /*height: 80%;*/
     /*z-index: 0;*/
